dojo-infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dojo-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dojo.gregori.eti.br
    secretName: dojo-tls
  rules:
  - host: dojo.gregori.eti.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dojo-frontend
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dojo-backend-ingress
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dojo.gregori.eti.br
    secretName: dojo-tls
  rules:
  - host: dojo.gregori.eti.br
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: dojo-backend
            port:
              number: 80
